sgx/third_party/crates-io/vendor/rocket_codegen/tests/ui-fail/typed-uri-bad-type.stderr
error[E0277]: the trait bound `usize: rocket::http::uri::FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:50:23
   |
50 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             usize as $TRAIT
             usize as $TRAIT
             usize as $TRAIT
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `usize: rocket::http::uri::FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:53:18
   |
53 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             usize as $TRAIT
             usize as $TRAIT
             usize as $TRAIT
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `usize: rocket::http::uri::FromUriParam<rocket::http::uri::Path, i64>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:56:23
   |
56 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, i64>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             usize as $TRAIT
             usize as $TRAIT
             usize as $TRAIT
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `S: rocket::http::uri::FromUriParam<rocket::http::uri::Path, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:59:31
   |
59 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, _>` is not implemented for `S`

error[E0277]: the trait bound `i32: rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:65:26
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                          ^^^^^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             i32 as $TRAIT
             i32 as $TRAIT
             i32 as $TRAIT
   = note: required because of the requirements on the impl of `rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` for `std::option::Option<i32>`

error[E0277]: the trait bound `std::string::String: rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:65:43
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                                           ^^^^^^^^^^^^^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` is not implemented for `std::string::String`
   |
   = help: the following implementations were found:
             std::string::String as $TRAIT
             std::string::String as $TRAIT
             std::string::String as $TRAIT
             std::string::String as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `rocket::http::uri::FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` for `std::result::Result<std::string::String, &rocket::http::RawStr>`

error[E0277]: the trait bound `isize: rocket::http::uri::FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:69:20
   |
69 |     uri!(simple_q: "hi");
   |                    ^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             isize as $TRAIT
             isize as $TRAIT
             isize as $TRAIT
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `isize: rocket::http::uri::FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:72:25
   |
72 |     uri!(simple_q: id = "hi");
   |                         ^^^^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             isize as $TRAIT
             isize as $TRAIT
             isize as $TRAIT
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `S: rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:75:24
   |
75 |     uri!(other_q: 100, S);
   |                        ^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`

error[E0277]: the trait bound `S: rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:78:26
   |
78 |     uri!(other_q: rest = S, id = 100);
   |                          ^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`

error[E0277]: the trait bound `S: rocket::http::uri::Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:42:29
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                             ^ the trait `rocket::http::uri::Ignorable<rocket::http::uri::Query>` is not implemented for `S`
...
81  |     uri!(other_q: rest = _, id = 100);
    |     ---------------------------------- in this macro invocation
    | 
   ::: $ROCKET/core/http/src/uri/uri_display.rs:467:40
    |
467 | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `rocket::http::uri::assert_ignorable`
    |
    = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: rocket::http::uri::Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:42:16
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                ^^^^^ the trait `rocket::http::uri::Ignorable<rocket::http::uri::Query>` is not implemented for `usize`
...
83  |     uri!(other_q: rest = S, id = _);
    |     -------------------------------- in this macro invocation
    | 
   ::: $ROCKET/core/http/src/uri/uri_display.rs:467:40
    |
467 | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `rocket::http::uri::assert_ignorable`
    |
    = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:83:26
   |
83 |     uri!(other_q: rest = S, id = _);
   |                          ^ the trait `rocket::http::uri::FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0277`.
